--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,10 +14,10 @@
       </a>
 
       <div class="trigger">
-      	<a class="page-link" href="/blog/">Blog</a>
-      	<a class="page-link" href="/research/">Research</a>
-      	<a class="page-link" href="/development/">Development</a>
-      	<a class="page-link" href="/about/">About</a>
+          <a class="page-link" href="/blog/">Blog</a>
+          <a class="page-link" href="/research/">Research</a>
+          <a class="page-link" href="/development/">Development</a>
+          <a class="page-link" href="/aboutme/">About</a>
       </div>
     </nav>
 
