--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,7 +5,6 @@
 
 // Our variables
 $base-font-family: 'Lucida Grande', 'Lucida Sans Unicode', 'Avenir Next', 'Hiragino Kaku Gothic ProN', Meiryo, 'Helvetica Neue', Helvetica, Arial, sans-serif;
-//$base-font-size:   16px;
 $base-font-size: 17px;
 $palm-font-size: 14px;
 $letter-spacing: 0.3px;
@@ -328,7 +327,7 @@ pre {
 .footer-icon{
     padding: 5px;
     opacity: 0.8;
-    width: 60px;
+    width: 55px;
     filter: alpha(opacity=80);
     -webkit-transition: 0.3s ease-in-out;
     -moz-transition: 0.3s ease-in-out;
@@ -425,6 +424,10 @@ a:hover .footer-icon{
 .post-link {
     display: block;
     font-size: 24px;
+    @include media-query($on-palm) {
+        font-size: 18px;
+        line-height: 1.2;
+    }
 }
 
 .post-header {
@@ -435,6 +438,10 @@ a:hover .footer-icon{
     font-size: 28px;
     letter-spacing: -1px;
     line-height: 1;
+    @include media-query($on-palm) {
+        font-size: 20px;
+        line-height: 1.4;
+    }
 }
 
 .post-content {
@@ -548,13 +555,13 @@ a:hover .footer-icon{
 .page-button{
     background-color:#ffffff;
     border-radius:3px;
-    box-shadow: 0 0 10px rgba(0,0,0,.1);
+    box-shadow: 0 0 3px rgba(0,0,0,.1);
     display: inline-block;
     position:relative;
-    width: 44%;
+    width: 42%;
     font-size: 16px;
     padding: 10px;
-    margin: 2px;
+    margin: 0px;
     
     a{
         display: block;
@@ -572,10 +579,10 @@ a:hover .footer-icon{
     box-shadow: 0 0 10px rgba(0,0,0,.1);
     display: inline-block;
     position:relative;
-    width: 44%;
+    width: 42%;
     font-size: 16px;
     padding: 10px;
-    margin: 2px;
+    margin: 0px;
 }
 
 .hatena-star-user{
