Added logo and analytics id

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -216,6 +216,11 @@ pre {
     position: relative;
 }
 
+.logo{
+    margin-top: 12px;
+    height: 32px;
+}
+
 .site-title {
     font-size: 26px;
     line-height: 56px;
@@ -245,6 +250,7 @@ pre {
     .page-link {
         color: $text-color;
         line-height: $base-line-height;
+        font-size: 20px;
 
         // Gaps between nav items, but not on the first one
         &:not(:first-child) {
@@ -360,6 +366,9 @@ a:hover .footer-icon{
     color: $grey-color;
     margin-left: -$spacing-unit / 2;
     @extend %clearfix;
+    @include media-query($on-palm) {
+    	font-size: 13px;
+    }
 }
 
 .footer-col {
@@ -405,7 +414,7 @@ a:hover .footer-icon{
 }
 
 .page-content {
-    padding: $spacing-unit 0;
+    padding: $spacing-unit*1.5 0 $spacing-unit 0;
 }
 
 .page-heading {
@@ -424,11 +433,21 @@ a:hover .footer-icon{
 .post-meta {
     font-size: $small-font-size;
     color: $grey-color;
+    a{
+    	color: $grey-color;
+    	&:hover{
+    		color: $brand-color;
+    	}
+    }
 }
 
 .post-link {
     display: block;
     font-size: 24px;
+    color: $grey-color-dark;
+    a:hover{
+    	color: $brand-color;
+    }
     @include media-query($on-palm) {
         font-size: 18px;
         line-height: 1.2;
@@ -534,24 +553,24 @@ a:hover .footer-icon{
     font-weight:600;
 }
 
-.item{
-  position:relative;
-  background-color:#ffffff;
-  color:"#333333";
-  border-radius:3px;
-  padding: 10px 20px 10px 20px;
-  margin: 0px 0px 10px 0px;
-  box-shadow: 0 0 10px rgba(0,0,0,.1);
-}
+// .item{
+//   position:relative;
+//   background-color:#ffffff;
+//   color:"#333333";
+//   border-radius:3px;
+//   padding: 10px 20px 10px 20px;
+//   margin: 0px 0px 10px 0px;
+//   box-shadow: 0 0 10px rgba(0,0,0,.1);
+// }
 
-.item a{
-  position: absolute;
-  display: block;
-  width: 100%;
-  height: 100%;
-  left: 0;
-  top: 0;
-}
+// .item a{
+//   position: absolute;
+//   display: block;
+//   width: 100%;
+//   height: 100%;
+//   left: 0;
+//   top: 0;
+// }
 
 .pagenation{
     text-align: center;
@@ -581,7 +600,7 @@ a:hover .footer-icon{
 .page-button-disabled{
     background-color:#f8f8f8;
     border-radius:3px;
-    box-shadow: 0 0 10px rgba(0,0,0,.1);
+    box-shadow: 0 0 3px rgba(0,0,0,.1);
     display: inline-block;
     position:relative;
     width: 42%;
