--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,9 @@
 
     <div class="page-content">
       <div class="wrapper">
-        {{ content }}
+        <div class="wrapper-inside">
+          {{ content }}
+        </div>
       </div>
     </div>
 
