--- a/_layouts/entries.html
+++ b/_layouts/entries.html
@@ -1,17 +1,14 @@
 ---
-layout: default
+layout: page
 ---
 
-<ul class="post-list">
-	{% for post in page.posts %}
-	<li>
+{% for post in page.posts %}
+<div class="post-list-item">
+    <a href="{{ post.url | prepend: site.baseurl }}"></a>
     <span class="post-meta">
     	{{ post.date | date: "%b %-d, %Y" }}
-    	{% for tag in post.tags %}
-        [<a href="/tag/{{tag}}/">{{ tag }}</a>]
-    	{% endfor %}
+    	{% for tag in post.tags %}[{{ tag }}]{% endfor %}
     </span>
-    <h2><a class="post-link" href="{{ post.url | prepend: site.baseurl }}">{{ post.title }}</a></h2>
-    </li>
-    {% endfor %}
-</ul>
+    <h2 class="post-link">{{ post.title }}</h2>
+</div>
+{% endfor %}
