--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,9 +16,9 @@ layout: default
     {{ content }}
   </article>
 
-  <div class="article-relations">
-      {% if page.relations %}
-    <h3><span class="lsf">check</span> 関連記事</h5>
+  <div class="post-relations">
+    {% if page.relations %}
+    <h3><span class="lsf">check</span> 関連記事</h3>
     <ul>
     {% for relation in page.relations %}
       <li><a href="/blog/{{relation}}/" class="linkedTitle">Now loading..</a></li>
@@ -27,14 +27,24 @@ layout: default
     {% endif %}
   </div>
 
+  <div class="post-social">
+  	<div class="tweet-button"><a href="https://twitter.com/share?text={% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}"><span class="lsf" style="font-size:20px;">twitter</span> tweet
+  </a></div>
+  	<div class="facebook-button"><a href="http://www.facebook.com/sharer.php?u={{ site.url }}{{ page.url }}&amp;t={% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}" onClick="window.open(encodeURI(decodeURI(this.href)), 'sharewindow', 'width=550, height=450, personalbar=0, toolbar=0, scrollbars=1, resizable=!'); return false;"><span class="lsf" style="font-size:20px;">facebook</span> share
+  </a></div>
+  	<div class="hatenabookmark-button"><a href="http://b.hatena.ne.jp/entry/{{ site.url }}{{ page.url }}"><span class="lsf" style="font-size:20px;">hatenabookmark</span> bookmark
+  </a></div>
+  	<div class="hatena-star"><a href="{{ site.url }}{{ page.url }}" style="display: none;">hatena</a></div>
+  </div>
+
   <div class="pagenation">
     {% if page.previous %}
-      <div class="page-button"><a href="{{ page.previous.url }}"></a><span class="lsf">left</span> Previous</div>
+      <div class="page-button"><a href="{{ page.previous.url }}"></a><span class="lsf">left</span> {{ page.previous.title }}</div>
     {% else %}
       <div class="page-button-disabled"><span class="lsf">left</span> Previous</div>
     {% endif %}
     {% if page.next %}
-      <div class="page-button"><a href="{{ page.next.url }}"></a>Next <span class="lsf">right</span></div>
+      <div class="page-button"><a href="{{ page.next.url }}"></a>{{ page.next.title }} <span class="lsf">right</span></div>
     {% else %}
       <div class="page-button-disabled">Next <span class="lsf">right</span></div>
     {% endif %}
