--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -454,12 +454,13 @@ a:hover .footer-icon{
 
 .post-list-item{
 	position:relative;
-	padding-top: $spacing-unit*0.4;
-	padding-bottom: $spacing-unit*0.4;
+	padding-top: $spacing-unit*0.3;
+	padding-bottom: $spacing-unit*0.5;
 	padding-left: $spacing-unit*0.4;
 	padding-right: $spacing-unit*0.4;
     border-top: 1px solid $grey-color-light;
     h2{
+        margin-top: 0;
     	margin-bottom: 0;
     }
     @include media-query($on-palm) {
