New blog post: proocol

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,8 +1,8 @@
 <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width initial-scale=1" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     {% if page.keywords != nil %}<meta name="keywords" content="{{ page.keywords }}">{% endif %}
+    {% if page.description != nil %}<meta name="description" content="{{ page.description }}">{% endif %}
     <meta name="author" href="https://plus.google.com/u/0/102413339779614193497/posts">
     <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no">
     <meta name="google-site-verification" content="sFx-iJWT2iihts7-5wK7CnR03-MymfWXmn_7KNoyIz0" />
