--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -72,7 +72,8 @@ h1, h2, h3, h4, h5, h6,
 p, blockquote, pre,
 ul, ol, dl, figure,
 %vertical-rhythm {
-    margin-bottom: $spacing-unit;
+    margin-top: $spacing-unit*0.5;
+    margin-bottom: $spacing-unit*0.5;
 }
 
 img {
@@ -532,6 +533,7 @@ a:hover .footer-icon{
 }
 
 .post-title {
+    margin-top: 0;
     font-size: 24px;
     line-height: 1.2;
     @include media-query($on-palm) {
