--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -66,6 +66,7 @@ body {
     color: $text-color;
     background-color: $background-color;
     -webkit-text-size-adjust: 100%;
+    -webkit-font-smoothing: antialiased;
     @include media-query($on-palm) {
         font-size: $palm-font-size;
     }
