--- a/_layouts/entries.html
+++ b/_layouts/entries.html
@@ -4,7 +4,7 @@ title: Blog
 ---
 <div class="tag-header">
   {% for tag in site.tags %}
-  <a href="/tag/{{ tag[0] }}/"><span class="lsf">tag</span>{{ tag[0] }}</a>({{ tag[1].size }})
+  <a href="/tag/{{ tag[0] }}/">#{{ tag[0] }}</a>({{ tag[1].size }})
   {% endfor %}
   </div>
 {% for post in page.posts %}
