--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -186,35 +186,31 @@ hr{
 }
 
 .wrapper {
-    max-width: -webkit-calc(1100px - (#{$spacing-unit} * 2));
-    max-width:         calc(1100px - (#{$spacing-unit} * 2));
+    max-width: -webkit-calc(700px + (#{$spacing-unit} * 5.0)*2);
+    max-width:         calc(700px + (#{$spacing-unit} * 5.0)*2);
     margin-right: auto;
     margin-left: auto;
-    padding-right: $spacing-unit;
-    padding-left: $spacing-unit;
     @extend %clearfix;
 
     @include media-query($on-laptop) {
-        max-width: -webkit-calc(900px - (#{$spacing-unit}));
-        max-width:         calc(900px - (#{$spacing-unit}));
-        padding-right: 0;
-        padding-left: 0;
+        max-width: -webkit-calc(700px + (#{$spacing-unit}*1.5)*2);
+        max-width:         calc(700px + (#{$spacing-unit}*1.5)*2);
     }
 }
 
 .wrapper-inside{
-	background-color: $background-color;
-	padding-top: $spacing-unit*2;
-  padding-bottom: $spacing-unit*2;
-	padding-right: $spacing-unit*3.5;
-  padding-left: $spacing-unit*3.5;
+    background-color: $background-color;
+    padding-top: $spacing-unit*2;
+    padding-bottom: $spacing-unit*2;
+    padding-right: $spacing-unit*5.0;
+    padding-left: $spacing-unit*5.0;
     @include media-query($on-laptop) {
-    	padding-right: $spacing-unit*1.2;
-    	padding-left: $spacing-unit*1.2;
+        padding-right: $spacing-unit*1.5;
+        padding-left: $spacing-unit*1.5;
     }
     @include media-query($on-palm) {
-    	padding-right: $spacing-unit*0.4;
-    	padding-left: $spacing-unit*0.4;
+        padding-right: $spacing-unit*0.4;
+        padding-left: $spacing-unit*0.4;
     }
 }
 
@@ -258,7 +254,6 @@ hr{
     }
 }
 
-
 /**
  * layout
  */
@@ -272,8 +267,8 @@ hr{
     background-color: rgba(255,255,255,0.9);
 
     @include media-query($on-palm) {
-    	padding-left: $spacing-unit*0.3;
-    	padding-right: $spacing-unit*0.3;
+        padding-left: $spacing-unit*0.3;
+        padding-right: $spacing-unit*0.3;
     }
 
     // Positioning context for the mobile navigation icon
@@ -433,7 +428,7 @@ a:hover .footer-icon{
     margin-left: -$spacing-unit / 2;
     @extend %clearfix;
     @include media-query($on-palm) {
-    	font-size: 14px;
+        font-size: 14px;
     }
 }
 
@@ -492,28 +487,28 @@ a:hover .footer-icon{
 }
 
 .post-list-item{
-	position:relative;
-	padding-top: $spacing-unit*0.3;
-	padding-bottom: $spacing-unit*0.5;
-	padding-left: $spacing-unit*0.4;
-	padding-right: $spacing-unit*0.4;
+    position:relative;
+    padding-top: $spacing-unit*0.3;
+    padding-bottom: $spacing-unit*0.5;
+    padding-left: $spacing-unit*0.1;
+    padding-right: $spacing-unit*0.1;
     border-top: 1px solid $grey-color-light;
     h2{
         margin-top: 0;
-    	margin-bottom: 0;
+        margin-bottom: 0;
     }
     @include media-query($on-palm) {
         padding-left: 0;
         padding-right: 0;
     }
-  	a{
-  		position: absolute;
-  		display: block;
-  		width: 100%;
-  		height: 100%;
-  		left: 0;
-  		top: 0;
-	}
+      a{
+          position: absolute;
+          display: block;
+          width: 100%;
+          height: 100%;
+          left: 0;
+          top: 0;
+    }
 }
 
 .post-meta {
@@ -521,14 +516,13 @@ a:hover .footer-icon{
     margin-bottom: 3px;
     padding-left: 2px;
     @include media-query($on-palm) {
-    	font-size: 14px;
-    	padding-left: 0px;
+        font-size: 14px;
+        padding-left: 0px;
     }
 }
 
 .post-link {
     display: block;
-    font-size: 24px;
     line-height: 1.2;
     color: darken($grey-color, 20%);
     @include media-query($on-palm) {
@@ -555,23 +549,23 @@ a:hover .footer-icon{
 .post-content {
     margin-bottom: $spacing-unit;
     h2 {
-        font-size: 20px;
+        font-size: 19px;
     }
     h3 {
-        font-size: 20px;
+        font-size: 19px;
         &:before{
             content: "rightright ";
             @extend .lsf;
         }
     }
     h4 {
-        font-size: 20px;
+        font-size: 19px;
     }
     @include media-query($on-palm) {
-    	text-align: justify;
-    	h2, h3{
-    		font-size: 15px;
-    	}
+        text-align: justify;
+        h2, h3{
+            font-size: 15px;
+        }
     }
 }
 
@@ -672,7 +666,7 @@ a:hover .footer-icon{
     -webkit-text-overflow: ellipsis;
     -o-text-overflow: ellipsis;
     @include media-query($on-laptop) {
-        width: 44%;
+        width: 43%;
         font-size: $small-font-size;
     }
     @include media-query($on-palm) {
@@ -814,7 +808,6 @@ a:hover .footer-icon{
     margin: 10px auto 50px auto;
     box-shadow: 0 0 4px 2px rgba(0,0,0,0.3);
 }
-
 
 .error-content{
     padding-top: $spacing-unit*5;
