--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -496,10 +496,16 @@ a:hover .footer-icon{
     }
 }
 
+.index-title {
+    margin-bottom: 0;
+}
+
 .index-icon {
     width: 80%;
+    padding-top: 20px;
     @include media-query($on-palm) {
         width: 50%;
+        padding-top: 0;
     }
 }
 
