--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,17 +8,17 @@
     <meta name="google-site-verification" content="sFx-iJWT2iihts7-5wK7CnR03-MymfWXmn_7KNoyIz0">
     <meta property="og:title" content="{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}">
     <meta property="og:type" content="article">
-    <meta property="og:url" content="{{ site.url }}{{ page.url }}">
+    <meta property="og:url" content="{{ site.fullurl }}{{ page.url }}">
     {% if page.eyecatch  != nil %}
         <meta property="og:image" content="{{ page.eyecatch }}">
     {% else %}
-        <meta property="og:image" content="{{ site.url }}/assets/img/icon_laptop.png">
+        <meta property="og:image" content="{{ site.fullurl }}/assets/img/icon_laptop.png">
     {% endif %}
     <title>{% if page.title %}{{ page.title }} - {{ site.title }}{% else %}{{ site.title }}{% endif %}</title>
 
-    <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ site.url }}/feed.xml">
+    <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ site.fullurl }}/feed.xml">
     <link rel="stylesheet" href="{{ "/assets/css/main.css" | prepend: site.baseurl }}">
-    <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
-    <link rel="shortcut icon" href="{{ site.url }}/assets/img/favicon.ico">
+    <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.fullurl }}">
+    <link rel="shortcut icon" href="{{ site.fullurl }}/assets/img/favicon.ico">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:700,400' rel='stylesheet' type='text/css'>
 </head>
