--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -3,53 +3,36 @@
 ---
 @charset "utf-8";
 
-// Our variables
-$base-font-family: Oxygen, 'Hiragino Kaku Gothic ProN', Meiryo, 'Helvetica Neue', Helvetica, Arial, sans-serif;
-$base-font-size: 16px;
-$large-font-size: 18px;
-$palm-font-size: 14px;
-$small-font-size: $base-font-size * 0.8;
-$base-line-height: 1.8;
-$letter-spacing: 0.4px;
+// Import partials from `sass_dir` (defaults to `_sass`)
+@import "syntax-highlighting";
 
-$spacing-unit: 30px;
-
-$text-color: #4a4a46;
-$background-color: #fdfdfd;
-$background-gray-color: #e1e6e8;
-
-$brand-color: #9694b1;
-$brand-color-dark: darken($brand-color, 15%);
-
-$grey-color: #828282;
-$grey-color-light: lighten($grey-color, 40%);
-$grey-color-dark: darken($grey-color, 35%);
-
-$yellow-color: #fcffce;
-$yellow-color-dark: darken($yellow-color, 30%);
-
-$on-palm: 500px;
-$on-laptop: 1000px;
-
-// Using media queries with like this:
-// @include media-query($palm) {
-//     .wrapper {
-//         padding-right: $spacing-unit / 2;
-//         padding-left: $spacing-unit / 2;
-//     }
-// }
+// Change layouts based on a screen width
 @mixin media-query($device) {
     @media screen and (max-width: $device) {
         @content;
     }
 }
 
-// Import partials from `sass_dir` (defaults to `_sass`)
-@import "syntax-highlighting";
+/* variables */
 
-/**
- * base
- */
+$base-font-family: Oxygen, 'Hiragino Kaku Gothic ProN', Meiryo, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+$base-font-size: 16px;
+$large-font-size: 18px;
+$palm-font-size: 14px;
+$small-font-size: 13px;
+$base-line-height: 1.8;
+$letter-spacing: 0.4px;
+$spacing-unit: 30px;
+
+$white-color: #fdfdfd;
+$brand-color: #9694b1;
+$brand-color-light: lighten($brand-color, 30%);
+$brand-color-dark: darken($brand-color, 50%);
+
+$on-palm: 500px;
+$on-laptop: 1000px;
+
+/* base */
 
 body, h1, h2, h3, h4, h5, h6,
 p, blockquote, pre, hr,
@@ -64,8 +47,8 @@ body {
     line-height: $base-line-height;
     letter-spacing: $letter-spacing;
     font-weight: 300;
-    color: $text-color;
-    background-color: $background-color;
+    color: $brand-color-dark;
+    background-color: $white-color;
     -webkit-text-size-adjust: 100%;
     -webkit-font-smoothing: antialiased;
     @include media-query($on-palm) {
@@ -119,8 +102,8 @@ a {
 }
 
 blockquote {
-    color: $grey-color;
-    border-left: 4px solid $grey-color-light;
+    color: $brand-color-dark;
+    border-left: 4px solid $brand-color-light;
     padding-left: $spacing-unit / 2;
     font-size: $small-font-size;
 
@@ -145,9 +128,9 @@ cite{
 pre,
 code {
     font-size: $small-font-size;
-    border: 1px solid $grey-color-light;
+    border: 1px solid $brand-color-light;
     border-radius: 3px;
-    background-color: $background-color;
+    background-color: $white-color;
 }
 
 code {
@@ -182,7 +165,7 @@ hr{
         font-size: 24px;
         padding: 0 10px;
         color: $brand-color;
-        background: $background-color;
+        background: $white-color;
     }
 }
 
@@ -200,7 +183,7 @@ hr{
 }
 
 .wrapper-inside{
-    background-color: $background-color;
+    background-color: $white-color;
     padding-top: $spacing-unit*2;
     padding-bottom: $spacing-unit*2;
     padding-right: $spacing-unit*5.0;
@@ -250,18 +233,45 @@ hr{
         vertical-align: middle;
 
         path {
-            fill: $grey-color;
+            fill: $brand-color-dark;
         }
     }
 }
 
-/**
- * layout
- */
+@font-face {
+    font-family: 'LigatureSymbols';
+    src: url('/assets/font/LigatureSymbols.eot');
+    src: url('/assets/font/LigatureSymbols.eot?#iefix') format('embedded-opentype'),
+         url('/assets/font/LigatureSymbols.woff') format('woff'),
+         url('/assets/font/LigatureSymbols.ttf') format('truetype'),
+         url('/assets/font/LigatureSymbols.svg#LigatureSymbols') format('svg');
+    src: url('/assets/font/LigatureSymbols.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+}
+
+.lsf, .lsf-icon:before {
+    font-family: 'LigatureSymbols';
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+       -moz-font-smoothing: antialiased;
+        -ms-font-smoothing: antialiased;
+         -o-font-smoothing: antialiased;
+            font-smoothing: antialiased;
+}
+
+.lsf-icon:before {
+    content: attr(title);
+    margin-right: .3em;
+    font-size: 130%;
+}
+
+// mark - layout
+
 .site-header {
     font-family: $base-font-family;
-    border-top: 5px solid $grey-color-dark;
-    border-bottom: 1px solid $grey-color-light;
+    border-top: 5px solid $brand-color-dark;
+    border-bottom: 1px solid $brand-color-light;
     min-height: 56px;
     padding-left: $spacing-unit;
     padding-right: $spacing-unit;
@@ -290,7 +300,7 @@ hr{
 
     &,
     &:visited {
-        color: $grey-color-dark;
+        color: $brand-color;
     }
 
     @include media-query($on-laptop) {
@@ -309,7 +319,7 @@ hr{
     }
 
     .page-link {
-        color: $text-color;
+        color: $brand-color-dark;
         line-height: $base-line-height;
         font-size: 18px;
 
@@ -323,8 +333,8 @@ hr{
         position: absolute;
         top: 9px;
         right: $spacing-unit*0.4;
-        background-color: $background-color;
-        border: 1px solid $grey-color-light;
+        background-color: $white-color;
+        border: 1px solid $brand-color-light;
         border-radius: 5px;
         text-align: right;
 
@@ -342,7 +352,7 @@ hr{
                 height: 15px;
 
                 path {
-                    fill: $grey-color-dark;
+                    fill: $brand-color-dark;
                 }
             }
         }
@@ -365,16 +375,16 @@ hr{
 }
 
 .site-footer {
-    background-color: $grey-color-dark;
+    background-color: $brand-color-dark;
     padding: $spacing-unit*2 0;
-    color: $background-color;
+    color: $white-color;
     p{
-        color: $background-color;
+        color: $white-color;
         line-height: 1.0;
         margin-bottom: $spacing-unit*0.33;
     }
     a{
-        color: $background-color;
+        color: $white-color;
         &:hover{
             color: $brand-color;
         }
@@ -425,7 +435,7 @@ a:hover .footer-icon{
 
 .footer-col-wrapper {
     font-size: 15px;
-    color: $grey-color;
+    color: $brand-color-light;
     margin-left: -$spacing-unit / 2;
     @extend %clearfix;
     @include media-query($on-palm) {
@@ -475,6 +485,8 @@ a:hover .footer-icon{
     }
 }
 
+/* index */
+
 .index-left {
     display: inline-block;
     position: relative;
@@ -517,15 +529,52 @@ a:hover .footer-icon{
 
 .text-dense {
     line-height: 1.5;
-    // text-align: justify;
 }
+
+/* about me */
+
+.profile-image{
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    background-size: contain;
+
+    position: relative;
+    display: block;
+    max-width: 90%;
+    margin: 10px auto 50px auto;
+    box-shadow: 0 0 4px 2px rgba(0,0,0,0.3);
+}
+
+/* 404 */
+
+.error-content{
+    padding-top: $spacing-unit*5;
+    padding-bottom: $spacing-unit*5;
+    text-align: center;
+}
+
+.error-number{
+    font-size: 120px;
+    line-height: 0.8;
+}
+
+.error-text{
+    font-size: 24px;
+}
+
+.background{
+    background-image: url("/assets/img/background.jpg");
+    background-size: cover;
+    background-attachment: fixed;
+    color: $white-color;
+    text-shadow: 0 1px 2px rgba(0,0,0,0.4);
+}
+
+/* entries */
 
 .page-content {
-    background-color: $background-gray-color;
-}
-
-.page-heading {
-    font-size: 20px;
+    background-color: $brand-color-light;
 }
 
 .post-list-item{
@@ -534,7 +583,7 @@ a:hover .footer-icon{
     padding-bottom: $spacing-unit*0.5;
     padding-left: $spacing-unit*0.3;
     padding-right: $spacing-unit*0.3;
-    border-top: 1px solid $grey-color-light;
+    border-top: 1px solid $brand-color-light;
     h2{
         margin-top: 0;
         margin-bottom: 0;
@@ -566,7 +615,7 @@ a:hover .footer-icon{
 .post-link {
     display: block;
     line-height: 1.2;
-    color: darken($grey-color, 20%);
+    color: $brand-color-dark;
     @include media-query($on-palm) {
         font-size: 18px;
         line-height: 1.2;
@@ -585,7 +634,7 @@ a:hover .footer-icon{
         font-size: 18px;
         line-height: 1.2;
     }
-    color: $text-color;
+    color: $brand-color-dark;
 }
 
 .post-content {
@@ -685,6 +734,12 @@ a:hover .footer-icon{
     }
 }
 
+twitterwidget,
+iframe[id^="twitter-widget-"] {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .injection-center{
     text-align:center;
     font-weight:600;
@@ -745,7 +800,7 @@ a:hover .footer-icon{
     margin-bottom: 5px;
     border-radius:3px;
     display: inline-block;
-    border: 1px solid $grey-color-light;
+    border: 1px solid $brand-color-light;
     @include media-query($on-palm) {
         padding: 6px 12px;
         margin-right: 4px;
@@ -766,76 +821,6 @@ a:hover .footer-icon{
     margin-bottom: $spacing-unit;
 }
 
-@font-face {
-    font-family: 'LigatureSymbols';
-    src: url('/assets/font/LigatureSymbols.eot');
-    src: url('/assets/font/LigatureSymbols.eot?#iefix') format('embedded-opentype'),
-         url('/assets/font/LigatureSymbols.woff') format('woff'),
-         url('/assets/font/LigatureSymbols.ttf') format('truetype'),
-         url('/assets/font/LigatureSymbols.svg#LigatureSymbols') format('svg');
-    src: url('/assets/font/LigatureSymbols.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
-}
-
-.lsf, .lsf-icon:before {
-    font-family: 'LigatureSymbols';
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-       -moz-font-smoothing: antialiased;
-        -ms-font-smoothing: antialiased;
-         -o-font-smoothing: antialiased;
-            font-smoothing: antialiased;
-}
-
-.lsf-icon:before {
-    content: attr(title);
-    margin-right: .3em;
-    font-size: 130%;
-}
-
-.background{
-    background-image: url("/assets/img/background.jpg");
-    background-size: cover;
-    background-attachment: fixed;
-    color: $background-color;
-    text-shadow: 0 1px 2px rgba(0,0,0,0.4);
-}
-
-.profile-image{
-    border-radius: 50%;
-    -webkit-border-radius: 50%;
-    -moz-border-radius: 50%;
-    background-size: contain;
-
-    position: relative;
-    display: block;
-    max-width: 90%;
-    margin: 10px auto 50px auto;
-    box-shadow: 0 0 4px 2px rgba(0,0,0,0.3);
-}
-
-.error-content{
-    padding-top: $spacing-unit*5;
-    padding-bottom: $spacing-unit*5;
-    text-align: center;
-}
-
-.error-number{
-    font-size: 120px;
-    line-height: 0.8;
-}
-
-.error-text{
-    font-size: 24px;
-}
-
 .footnotes{
     font-size: 12px;
-}
-
-twitterwidget,
-iframe[id^="twitter-widget-"] {
-  margin-left: auto;
-  margin-right: auto;
 }
