Added new posts

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -149,8 +149,8 @@ pre {
 }
 
 hr{
-    margin-top: $spacing-unit*2;
-    margin-bottom: $spacing-unit*2;
+    margin-top: $spacing-unit;
+    margin-bottom: $spacing-unit;
     height: 0;
     border: 0;
     border-bottom:1px dashed $brand-color;
