--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
   <div class="wrapper">
 
-    <a href="{{ site.baseurl }}/"><img class="logo" src="/assets/img/logo.png"></a>
+    <a href="{{ site.baseurl }}/"><img class="logo" src="/assets/img/logo.svg"></a>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
