--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -25,20 +25,17 @@
       </div>
     </div>
     <div class="footer-bio">
-      <a href = "https://github.com/shoya140/"><img src="/assets/img/icon_github.png" class="footer-icon"></a>
-      <a href = "https://twitter.com/shoya140/"><img src="/assets/img/icon_twitter.png" class="footer-icon"></a>
-      <script type="text/javascript" language="javascript">
-      function mail(){var s="FI=;NCIHeBL?@tYG;CFNIqMBIS;eCMBCG;LOwAG;CFe=IGY",r="";
-      for(i=0;i<s.length;i++)r+=String.fromCharCode((s.charCodeAt(i)+5)%93+33);eval(r);}
-        document.write('<a href="javascript:mail()"><img src="/assets/img/icon_mail.png" class="footer-icon"></a>')</script>
-      <a href = "/feed.xml"><img src="/assets/img/icon_rss.png" class="footer-icon"></a><br>
+      <a href = "https://github.com/shoya140/"><img src="/assets/img/icon_github.png" class="footer-icon" /></a>
+      <a href = "https://twitter.com/shoya140/"><img src="/assets/img/icon_twitter.png" class="footer-icon" /></a>
+      <a href = "javascript:mail()"><img src="/assets/img/icon_mail.png" class="footer-icon" /></a>
+      <a href = "/feed.xml"><img src="/assets/img/icon_rss.png" class="footer-icon" /></a><br/>
       <p>© 2014 - 2018 <a href="https://plus.google.com/102413339779614193497?rel=author">Shoya Ishimaru</a></p>
     </div>
   </div>
 </footer>
 <script type="text/javascript" src="/assets/js/jquery.1.10.2.min.js"></script>
 <script type="text/javascript" src="/assets/js/jquery.color.js"></script>
-<script src="/assets/js/main.js"></script>
+<script type="text/javascript" src="/assets/js/main.js"></script>
 <script type="text/javascript">
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', 'UA-1918944-8']);
