--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="site-header">
   <div class="wrapper">
-    <a href="{{ site.baseurl }}/"><img class="logo" src="/assets/img/logo.svg"></a>
+    <a href="{{ site.baseurl }}/"><img class="logo" src="/assets/img/logo.svg" /></a>
     <nav class="site-nav">
       <a href="#" class="menu-icon">
         <svg viewBox="0 0 18 15">
